# solana-chat

./: .gitignore  Anchor.toml  Cargo.lock.v4.bak  Cargo.toml  README.md  package.json
migrations/: deploy.ts
programs/project-chat/: Cargo.toml
programs/project-chat/src/: lib.rs
programs/project-comments/: Cargo.toml
programs/project-comments/src/: lib.rs
scripts/: init-devnet.js  read-config-devnet.js
tests/: project-chat.ts  project-comments.ts
