[package]
name = "project-comments"
version = "1.0.3"
description = "Project Comments Anchor program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "project_comments"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.30.1"
solana-program = "1.18.26"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
